--- a/자바스크립트 복습/prompt.html
+++ b/자바스크립트 복습/prompt.html
@@ -17,7 +17,7 @@
             font-size: 1.3em;
         }
         span{
-            color: darksalmon;
+            color: darkturquoise;
             font-weight: bold;
         }
     </style>
