HTML - CSS 캐스케이딩 (CSS 적용 우선순위)

--- a/HTML_CSS/HTML_기초1/css_cascading.html
+++ b/HTML_CSS/HTML_기초1/css_cascading.html
@@ -14,9 +14,9 @@
         h3{ color: red;}
         header h3{ color: green;}
         
-        h4{ color: red;} 
-        .color{ color: green;}
-        #color{ color: blue;}
+        h4{ color: red;} /*type*/
+        .color{ color: green;} /*class*/
+        #color{ color: blue;} /*id*/
     </style>
 </head>
 <body>
@@ -24,6 +24,7 @@
     <header>
         <h3>디테일 캐스케이딩</h3>
     </header>
+    <!--style-->
     <h4 style="color: yellow;" id="color" class="color">선택자 캐스케이딩</h4>   
 </body>
 </html>
