--- a/자바스크립트 복습/객체/object-result.html
+++ b/자바스크립트 복습/객체/object-result.html
@@ -7,8 +7,8 @@
     <style>
         #display{
             width: 500px;
-            background-color: aquamarine;
             font-size: 20px;
+            background-color: aquamarine;
             border: 1px solid black;
             text-align: center;
             margin: 50px auto;
@@ -28,7 +28,7 @@
     <div id="display" class="popup"></div>
     <script>
         let toyRobot={
-            productId: lego-112,
+            productId: "lego-112",
             name:"starwars",
             price: 125000,
             madeIn:"Korea",
