폴더명 변경

--- a/jsreview/배열/itemlistarray.html
+++ b/jsreview/배열/itemlistarray.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="input.css">
-    <link rel="stylesheet" href="list.css">
+    <link rel="stylesheet" href="/자바스크립트 복습/배열/input.css">
+    <link rel="stylesheet" href="/자바스크립트 복습/배열/list.css">
     <title>준비물 점검 프로그램 만들기 (예정)</title>
 </head>
 <body>
