prompt 함수 사각형 넓이 출력 연습

--- a/HTML_CSS/HTML_기초1/link-img.html
+++ b/HTML_CSS/HTML_기초1/link-img.html
@@ -16,7 +16,7 @@
     <!--target:blank - 새 창으로 열기-->
     <!--<img src="" alt=""> 이미지 출력--> 
     <a href="http://www.naver.com" target="blank">
-        <img src="/HTML/linkimg.jpg" alt="꽃 그림">    
+        <img src="/HTML_CSS/HTML_기초1/linkimg.jpg" alt="꽃 그림">    
     </a>
 </body>
 </html>
