할인 가격 구하기

--- a/jsreview/자바스크립트 기초/bargain.html
+++ b/jsreview/자바스크립트 기초/bargain.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>할인 가격 구하기</title>
+    <title>자바스크립트 - 할인 가격 구하기</title>
     <style>
         #contents{
             width: 450px;
@@ -31,7 +31,7 @@
         input:nth-child(3){
             margin-top: 20px;
             text-align: center;
-        }
+        } 
         button{
             padding: 11px 11px;
             border:1px solid #ccc;
