한국 나이 계산하기 프로그
나이 입력하면 한국 나이 출력

--- a/jsreview/자바스크립트 기초/ageresult.html
+++ b/jsreview/자바스크립트 기초/ageresult.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>나이 계산하기</title>
+    <title>한국  나이 계산하기 프로그램</title>
     <style>
       body {
         text-align: center;
