switch 문으로 강의실 찾아가기 프로그램

--- a/jsreview/제어문과 반복문/switch.html
+++ b/jsreview/제어문과 반복문/switch.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <h1>강의실 찾아가기 프로그램</h1>
+    <h1>자바스크립트 - 강의실 찾아가기 프로그램</h1>
     <script>
       let session = prompt("관심 강의실을 선택하세요. 1.C언어 2.자바 3.파이썬","1");
       switch (session) {
