--- a/jsreview/제어문과 반복문/forplushundred.html
+++ b/jsreview/제어문과 반복문/forplushundred.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1부터 100까지 더하기</title>
+    <title>자바스크립트 - 1부터 100까지 더하기</title>
     <style>
         h1{
             text-align: center;
