구구단 표 만들기 프로그램

--- a/jsreview/제어문과 반복문/gugudan.html
+++ b/jsreview/제어문과 반복문/gugudan.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>구구단 표 만들기</title>
+    <title>자바스크립트 - 구구단 표 만들기</title>
     <style>
       body {
         text-align: center;
