--- a/jsreview/제어문과 반복문/forstar.html
+++ b/jsreview/제어문과 반복문/forstar.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>for문으로 별찍기</title>
+    <title>자바스크립트 - for문으로 별찍기</title>
     <style>
       h1 {
         text-align: center;
