기본 객체 만들기

--- a/jsreview/객체/object-result.html
+++ b/jsreview/객체/object-result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>객체 만들기 1</title>
+    <title>자바스크립트 - 객체 만들기 1</title>
     <style>
         #display{
             width: 500px;
