--- a/jsreview/객체/circleobject.html
+++ b/jsreview/객체/circleobject.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>객체로 원의 둘레와 넓이 구하기</title>
+    <title>자바스크립트 - 객체로 원의 둘레와 넓이 구하기</title>
     <style>
         body{
             text-align: center;
