--- a/jsreview/객체/instanceobject.html
+++ b/jsreview/객체/instanceobject.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>생성자로 객체 만들기</title>
+    <title>자바스크립트 - 생성자로 객체 만들기</title>
     <style>
         h1{
             margin-top: 180px;
