Date 객체를 이용한 기념일 계산기

--- a/jsreview/객체/dateobject.html
+++ b/jsreview/객체/dateobject.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>고양이 기념일 계산기</title>
+    <title>자바스크립트 객체 - 고양이 기념일 계산기</title>
     <style>
         *{
             box-sizing: border-box;
