--- a/jsreview/배열/itemlistarray.html
+++ b/jsreview/배열/itemlistarray.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/자바스크립트 복습/배열/input.css">
-    <link rel="stylesheet" href="/자바스크립트 복습/배열/list.css">
-    <title>준비물 점검 프로그램 만들기 (예정)</title>
+    <link rel="stylesheet" href="/jsreview/배열/input.css">
+    <link rel="stylesheet" href="/jsreview/배열/list.css">
+    <title>자바스크립트 - 준비물 점검 프로그램 만들기</title>
 </head>
 <body>
     <div id="wrap">
