HTML DOM 요소의 스타일 변경

--- a/jsreview/DOM과 이벤트/domselect.html
+++ b/jsreview/DOM과 이벤트/domselect.html
@@ -6,10 +6,10 @@
     <title>DOM 요소의 선택</title>
   </head>
   <body>
-    <div name="red" class="fruit" id="grape"></div>
-    <div name="yellow" class="fruit" id="watermelon"></div>
-    <div name="blue" class="vegetable" id="tomato"></div>
-    <div name="green" class="vegetable" id="onion"></div>
+    <div name="red" class="fruit" id="grape">grape</div>
+    <div name="yellow" class="fruit" id="watermelon">watermelon</div>
+    <div name="blue" class="vegetable" id="tomato">tomato</div>
+    <div name="green" class="vegetable" id="onion">onion</div>
   </body>
   <script>
     //HTML <div> 요소를 선택
