--- a/jsreview/DOM과 이벤트/domselect.html
+++ b/jsreview/DOM과 이벤트/domselect.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOM 요소의 선택</title>
+    <title>HTML DOM 요소의 선택</title>
   </head>
   <body>
     <div name="red" class="fruit" id="grape">grape</div>
